# flare

./: .buildinfo  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  about.html  api.html  concepts.html  datetime.html  development.html  dummy.html  fields.html  files.html  flags.html  genindex.html  guide.html  index.html  layers.html  metadata.html  names.html  numbers.html  objects.inv  principles.html  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  statistics.html  usage.html  variables.html  versions.html
.doctrees/: about.doctree  api.doctree  concepts.doctree  datetime.doctree  development.doctree  dummy.doctree  environment.pickle  fields.doctree  files.doctree  flags.doctree  guide.doctree  index.doctree  layers.doctree  metadata.doctree  names.doctree  numbers.doctree  principles.doctree  reference.doctree  statistics.doctree  usage.doctree  variables.doctree  versions.doctree
.doctrees/includes/: ipsum.doctree
_modules/: index.html
_modules/copyme/: module.html
_modules/copyme/mypackage/: submodule.html
_modules/flare/: module.html
_sources/: about.rst.txt  concepts.rst.txt  datetime.rst.txt  files.rst.txt  flags.rst.txt  guide.rst.txt  index.rst.txt  names.rst.txt  numbers.rst.txt  principles.rst.txt  usage.rst.txt  variables.rst.txt
_static/: carousel_table.css
docs/: about.rst  api.rst  build.py  concepts.md  conf.py  datetime.rst  fields.rst  flags.rst  index.rst  layers.rst  metadata.rst  names.rst  principles.md  principles.rst  reference.rst  statistics.rst  usage.rst  versions.rst
docs/data/: flags.csv  flags_all.csv  flags_datetime.csv  flags_number.csv  metadata_core.csv  statistics_core.csv
includes/: ipsum.html
src/flare/: __init__.py  numflare.py
src/flare/data/: flags.csv  names.csv
tests/: conftest.py
tests/bcmk/: test_bcmk_numflare.py
tests/data/: test_numbers.csv
tests/unit/: test_module.py  test_numflare.py  test_unit_numflare.py
