[project]
name = "flare"
version = "0.0.1"
description = "A system of conventions, notations and nomenclature for labeling files, columns and other assets. "
authors = [
  {name = "Iporã Possantti", url = "https://github.com/iporepo"},
]
maintainers = [
  {name = "Iporã Possantti", url = "https://github.com/iporepo"}
]
readme = {file = "README.md"}
license = {file = "LICENSE"}  # Points to your GPLv3 file
requires-python = ">=3.12"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/iporepo/flare"

[tool.setuptools.packages.find]
where = ["src"]
